--- a/src/components/User.css
+++ b/src/components/User.css
@@ -27,7 +27,7 @@
   }
   
   .fundoohead {
-    padding-left: 30%;
+    padding-left: 25%;
     color: rgb(30, 210, 75);
   }
   
@@ -70,4 +70,8 @@
     padding-right: 0%;
     padding-left: 0%;
     padding-bottom: 10%;
+  }
+  .row {
+    display: flex;
+    justify-content: space-evenly;
   }
