--- a/src/components/User.css
+++ b/src/components/User.css
@@ -27,7 +27,7 @@
   }
   
   .fundoohead {
-    padding-left: 25%;
+    padding-left: 0%;
     color: rgb(30, 210, 75);
   }
   
@@ -41,20 +41,20 @@
   
   .mainReg {
     margin-top: 5%;
-    margin-left: 25%;
-    margin-right: 25%;
+    margin-left: 35%;
+    margin-right: 30%;
     margin-bottom: 20%;
   
-    border: 5px solid coral;
+    border: 5px solid black;
     border-radius: 1em;
     border-spacing: 2em;
   }
   
   .mainLogin {
     margin-top: 5%;
-    margin-left: 25%;
+    margin-left: 30%;
     margin-right: 25%;
-    margin-bottom: 25%;
+    margin-bottom: 30%;
   
     border: 5px solid rgb(252, 255, 80);
     border-radius: 1em;
@@ -71,7 +71,12 @@
     padding-left: 0%;
     padding-bottom: 10%;
   }
+
   .row {
     display: flex;
     justify-content: space-evenly;
+    width: 105%;
+    /* background: yellowgreen; */
+    margin-left: 43px;
   }
+
