--- a/src/components/User.css
+++ b/src/components/User.css
@@ -42,7 +42,7 @@
   .mainReg {
     margin-top: 5%;
     margin-left: 35%;
-    margin-right: 25%;
+    margin-right: 28%;
     margin-bottom: 20%;
   
     border: 5px solid black;
@@ -56,7 +56,7 @@
     margin-right: 25%;
     margin-bottom: 30%;
   
-    border: 5px solid rgb(252, 255, 80);
+    border: 5px solid rgb(0, 0, 0);
     border-radius: 1em;
     border-spacing: 1em;
   }
@@ -80,3 +80,26 @@
     margin-left: 43px;
   }
 
+  .snackbar {
+    visibility: hidden;
+    min-width: 250px;
+    margin-left: -125px;
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    border-radius: 2px;
+    padding: 16px;
+    position: fixed;
+    z-index: 1;
+    left: 50%;
+    bottom: 30px;
+    font-size: 1rem;
+  }
+
+  .snackbar.show {
+    visibility: visible; /* Show the snackbar */
+    /* Add animation: Take 0.5 seconds to fade in and out the snackbar. 
+   However, delay the fade out process for 2.5 seconds */
+   -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+   animation: fadein 0.5s, fadeout 0.5s 2.5s;
+  }
