--- a/src/components/User.css
+++ b/src/components/User.css
@@ -47,6 +47,7 @@
   }
   
   .mainReg {
+    
     /* margin-top: 5%;
     margin-left: 35%;
     margin-right: 28%;
@@ -58,16 +59,21 @@
   }
   
   .mainLogin {
-    margin-top: 7%;
-    margin-left: 27%;
-    margin-right: 27%;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    position: absolute;
+    top: 20%;
+    left: 30%;
+    /* margin-top: 7%;
+    margin-left: 28%;
+    margin-right: 20%;
     margin-bottom: 30%;
-    boxShadow:"0px 0px 10px 2px";
     display:"flex";
   
     border: 5px solid rgb(0, 0, 0);
     border-radius: 1em;
-    border-spacing: 1em;
+    border-spacing: 1em; */
   }
   
   .Register {
@@ -111,4 +117,6 @@
    animation: fadein 0.5s, fadeout 0.5s 2.5s;
   }
 
+
+  
  
