[Akhilesh]Refactor. added  padding height and width to Title card in CreateNote.jsx file

--- a/src/components/Note.css
+++ b/src/components/Note.css
@@ -4,3 +4,11 @@
     justify-content: center;
     margin-top: 100px;
   }
+
+
+
+  .b {
+    padding: 18px;
+    height: 18px;
+    width: 30em;
+  }
