--- a/src/components/Note.css
+++ b/src/components/Note.css
@@ -17,3 +17,13 @@
     justify-content: space-between;
     align-items: center;
   }
+  .create_icon {
+    width: 9em;
+    display: flex;
+    justify-content: space-between;
+  }
+  /* .card_open {
+    margin-top: 125px;
+    display: flex;
+    justify-content: center;
+  } */
