--- a/src/components/Note.css
+++ b/src/components/Note.css
@@ -1,47 +1,67 @@
 /*create note.css*/
- .new_card {
-    display: flex;
-    justify-content: center;
-    margin-top: 100px;
+.new_card {
+  display: flex;
+  justify-content: center;
+  margin-top: 100px;
+}
+
+@media screen and (max-width: 600px) {
+  .new_card {
+    width: 320px;
   }
-  @media screen and (max-width: 600px) {
-      .new_card {
-      width: 320px;
-    }
-  }
+}
 
 
-  .create {
-    padding: 18px;
-    height: 18px;
-    width: 30em;
-  }
-  .create1 {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    }
-    
-  .create_icon {
-    width: 9em;
-    display: flex;
-    justify-content: space-between;
-  }
-  .card_open {
-    margin-top: 125px;
-    display: flex;
-    justify-content: center;
-  }
-  .card1{
-      width: 30em;
-      padding: 20px;
-  }
-  .icons2 {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    cursor: pointer;
-    padding: 5px;
-  }
+.create {
+  padding: 18px;
+  height: 18px;
+  width: 30em;
+}
 
-  
+.create1 {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.create_icon {
+  width: 9em;
+  display: flex;
+  justify-content: space-between;
+}
+
+.card_open {
+  margin-top: 125px;
+  display: flex;
+  justify-content: center;
+}
+
+.card1 {
+  width: 30em;
+  padding: 20px;
+}
+
+.icons2 {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  cursor: pointer;
+  padding: 5px;
+}
+
+.pin-over {
+  height: 2em;
+  width: 2em;
+  /* justify-content: space-between; */
+  /* display: flex; */
+  /* padding-left:  900px; */
+  /* margin-top: ; */
+
+  /* width: 30em; */
+}
+
+.pin-btnv {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
