[Akhilesh]Refactor.added changed note.css for CreateNote

--- a/src/components/Note.css
+++ b/src/components/Note.css
@@ -60,8 +60,8 @@
   /* width: 30em; */
 }
 
-.pin-btnv {
+/* .pin-btnv {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-}
+} */
