[Akhilesh]Refactor.added changed hight and width for image pin for CreateNote

--- a/src/components/Note.css
+++ b/src/components/Note.css
@@ -50,8 +50,8 @@
 }
 
 .pin-over {
-  height: 2em;
-  width: 2em;
+  /* height: 2em;
+  width: 2em; */
   /* justify-content: space-between; */
   /* display: flex; */
   /* padding-left:  900px; */
